--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,6 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
-.vscode/*
 
 # Visual Studio Code
 .vscode/*
@@ -41,3 +40,5 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+.angular
