--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@types/marked": "^4.0.3",
+    "ace-builds": "^1.23.4",
+    "bootstrap": "^5.3.1",
+    "font-awesome": "^4.7.0",
+    "ngx-markdown": "^15.1.2",
+    "ngx-markdown-editor": "^5.3.1",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "semantic-ui-css": "^2.5.0",
     "tslib": "^2.3.0",
